<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/ptk_back_color"
    android:id="@+id/main_layout"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="bottom"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:layout_marginLeft="10sp"
            android:layout_weight="1"
            android:text="DRK OS"
            android:layout_marginTop="10sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/green"
            android:textSize="25sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="5dp"
            android:layout_marginTop="10dp"
            />
        <ImageView
            android:layout_width="280sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_desc"
            android:cropToPadding="false"
            android:src="@drawable/drk_ptkimg"
            android:scaleType="fitCenter"

            android:visibility="visible" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="5dp"
            android:layout_marginTop="1dp"
           />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingLeft="42dp"
        android:paddingRight="42dp"
        android:paddingBottom="50dp">
        <!-- android:background="#F6E3CE"-->

        <EditText
            android:id="@+id/userip"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_login"
            android:hint="@string/txt_site_ip"
            android:inputType="textVisiblePassword"
            android:paddingLeft="16dp"
            android:textColor="@color/login_edit_text"
            android:textColorHint="@color/login_edit_hint"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/userid"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_login"
            android:hint="@string/txt_your_id"
            android:inputType="textVisiblePassword"
            android:paddingLeft="16dp"
            android:textColor="@color/login_edit_text"
            android:textColorHint="@color/login_edit_hint"
            android:textSize="16sp"
            tools:ignore="Deprecated" />

        <EditText
            android:id="@+id/userpassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_login"
            android:hint="@string/txt_your_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingLeft="16dp"
            android:textColor="@color/login_edit_text"
            android:textColorHint="@color/login_edit_hint"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="#00ffffff"
                android:clickable="true"
                android:gravity="center_vertical">

                <CheckBox
                    android:id="@+id/chk_ip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:checked="false"
                    android:text="IP"
                    android:textColor="#333333"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout_save_area"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="#00ffffff"
                android:clickable="true"
                android:gravity="center_vertical">

                <CheckBox
                    android:id="@+id/chk_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:checked="false"
                    android:text="ID"
                    android:textColor="#333333"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout_save_area_auto"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="#00ffffff"
                android:clickable="true"
                android:gravity="center_vertical">

                <CheckBox
                    android:id="@+id/chk_auto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:checked="false"
                    android:text="AUTO"
                    android:textColor="#333333"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@color/light_blue"
            android:text="@string/txt_login"
            android:textColor="@color/secondary_text_white_color"
            android:textSize="16sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/label_version"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:paddingLeft="42dp"
        android:paddingRight="42dp"
        android:textColor="@color/black"
        android:textSize="12sp" />




</RelativeLayout>